--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: archij30@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "/" 
-url: "https://archij30.github.io" 
+url: "https://archij30.github.io/" 
 twitter_username: 
 github_username: archij30
 
