Update experience details

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,9 @@
-- role: Open Source Fellow
-  company: MLH Fellowship
-  dates: Summer 2020
-  logo: fellowship.svg
+- role: Software Developer
+  company: ION Trading
+  dates: June,2019 - Present
+  logo: ion.png
+
+- role: Intern
+  company: Erns & Young
+  dates: June,2018 - July,2019
+  logo: ey.png
