Update projects details

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,20 +1,16 @@
-- title: Social Good!
-  event: MLH Fellowship Explorer Sprint 5
-  date: Fall 2020 - Batch 1
+- title: Gesture controlled robotic car
+  event: GRIDTECH 2019
+  date: April, 2019
 
-- title: Developer Tools!
-  event: MLH Fellowship Explorer Sprint 4
-  date: Fall 2020 - Batch 1
+- title: Smartphone as gaming controller
+  event: GRIDTECH 2019
+  date: April, 2019
 
-- title: Machine Learning Project
-  event: MLH Fellowship Explorer Sprint 3
-  date: Fall 2020 - Batch 1
+- title: Portfolio website using HTML,CSS,JS
+  event: Personal
+  date: December, 2020
 
-- title: Fun Game
-  event: MLH Fellowship Explorer Sprint 2
-  date: Fall 2020 - Batch 1
+- title: ngClassfieds
+  event: Personal
+  date: October, 2020
 
-- title: Flash Card Generator
-  event: MLH Fellowship Explorer Sprint 1
-  date: Fall 2020 - Batch 1
-  page-name: sprint1
