--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
 - course: B.Tech Electronics and Communication Engineering
   institute: Indira Gandhi Delhi Technical University for Women
   dates: 2015 - 2019
-  logo: igdtu.jpg
+  logo: grad.svg
   
 - course: A.I.S.S.C.E
   institute: Bal Bharati Public School
   dates: 2013-2015
-  logo: bbps.jpg
+  logo: school.svg
   
