--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - course: B.Tech Electronics and Communication Engineering
   institute: Indira Gandhi Delhi Technical University for Women
   dates: 2015 - 2019
-  logo: grad.svg
+  logo: grad2.svg
   
 - course: A.I.S.S.C.E
   institute: Bal Bharati Public School
