--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,9 @@
 - role: Software Developer
   company: ION Trading
   dates: June,2019 - Present
-  logo: ion.png
+  logo: job.svg
 
 - role: Intern
   company: Erns & Young
   dates: June,2018 - July,2019
-  logo: ey.png
+  logo: intern.svg
