--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,6 +4,6 @@
   logo: job.svg
 
 - role: Intern
-  company: Erns & Young
+  company: Ernst & Young
   dates: June,2018 - July,2019
   logo: intern.svg
